--- a/velo-a/public/starterPack.html
+++ b/velo-a/public/starterPack.html
@@ -47,54 +47,48 @@
 	<div>
 		<h2 style="margin-bottom: 8px;">Pour ton trajet, je te recommande de prendre :</h2>
 		<p id="instruction">
-			█████████ █████████ █████████
+			<br/><br/>
 			<br/>
-			█████████ █████████
-			█████████ █████████ █████████ █████████ █████████
 		</p>
 	</div>
 
 	<div>
 		<h3>Infos météo :</h3>
 		<p id="meteo">
-			█████████
 			<br/>
-			█████████ █████████
 			<br/>
-			█████████ █████████
 			<br/>
-			█████████ █████████
+			<br/>
+			<br/>
 		</p>
 	</div>
 
 	<div>
 		<h3>Infos santé :</h3>
-		<p id="sante">█████████ █████████ █████████ █████████ █████████ █████████</p>
+		<p id="sante"><br/></p>
 	</div>
 
 	<div>
 		<h3>Infos trafic :</h3>
 		<p id="traffic">
-			█████████ █████████ █████████
 			<br/>
-			█████████ █████████
 			<br/>
-			█████████ █████████
 			<br/>
-			█████████ █████████ █████████
+			<br/>
+			<br/>
 		</p>
 	</div>
 
 	<div>
 		<h3>Infos qualité de l’air :</h3>
 		<p id="qualiteAir">
-			█████████ █████████
+			<br/>
 		</p>
 	</div>
 
 	<div id="div-messageFin">
 		<p id="messageFin">
-			█████████ █████████ █████████ █████████
+			<br/>
 		</p>
 	</div>
 
